<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:src="@drawable/login_logo" />

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:cardBackgroundColor="#FFF"
            app:cardCornerRadius="15dp">


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_corner"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/text_corner"
                    android:gravity="center"
                    android:text="@string/title_activity_login"
                    android:textColor="#454545"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:layout_marginTop="15dp"
                    android:elevation="12dp">

                    <AutoCompleteTextView
                        android:id="@+id/email_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_oval"
                        android:drawableRight="@drawable/email"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:outlineAmbientShadowColor="#000"
                        android:outlineSpotShadowColor="#000"
                        android:padding="7dp"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:elevation="12dp">

                    <EditText
                        android:id="@+id/password_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_oval"
                        android:drawableRight="@drawable/lock"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"

                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:outlineAmbientShadowColor="#000"
                        android:outlineSpotShadowColor="#000"
                        android:padding="7dp"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/email_sign_in_butto_n"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:background="@drawable/signin_btn_bg"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/sign_up"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:text="Sign Up"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"
                android:text="Need an Account"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

    </ScrollView>


    <!--    TODO -->
    <LinearLayout
        android:id="@+id/linear_layout_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:alpha=".7"
            android:background="@drawable/edt_bg"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_weight="2"
                android:alpha=".6"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColor="#FFF"
                android:textColorHint="@color/white"
                android:textSize="14dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginTop="11dp"
                android:alpha=".6"
                android:background="@color/white" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:alpha=".6"
                android:background="@drawable/user" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:alpha=".6"
            android:background="@drawable/edt_bg"
            android:orientation="horizontal">



            <EditText
                android:id="@+id/pasword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_weight="2"
                android:alpha=".6"

                android:background="@null"
                android:hint=" Password "
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="#FFF"
                android:textColorHint="@color/white"
                android:textSize="14dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginTop="11dp"
                android:alpha=".6"
                android:background="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:alpha=".6"
                android:background="@drawable/key" />



        </LinearLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/action_sign_in"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#4B4B4B"
            android:textSize="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Call_Sign_Up"
            android:text="@string/signUp_txt"
            android:textColor="#fff"
            android:layout_marginTop="12dp"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forget Password?"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"/>


    </LinearLayout>




</RelativeLayout>
